--- a/package.json
+++ b/package.json
@@ -1,24 +1,45 @@
 {
-    "name": "keysmith",
-    "version": "0.1.0",
-    "private": true,
-    "description": "Professional password generator and entropy toolkit.",
-    "type": "module",
-    "workspaces": [
-        "apps/*",
-        "packages/*"
-    ],
-    "engines": {
-        "node": ">=20"
-    },
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/alangonzalez7/keysmith.git"
-    },
-    "bugs": {
-        "url": "https://github.com/alangonzalez7/keysmith/issues"
-    },
-    "homepage": "https://github.com/alangonzalez7/keysmith#readme",
-    "scripts": {}
+  "name": "keysmith",
+  "version": "0.1.0",
+  "private": true,
+  "description": "Professional password generator and entropy toolkit.",
+  "type": "module",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "engines": {
+    "node": ">=20"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alangonzalez7/keysmith.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alangonzalez7/keysmith/issues"
+  },
+  "homepage": "https://github.com/alangonzalez7/keysmith#readme",
+  "scripts": {
+    "format": "prettier . --write",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "precommit:lint": "lint-staged",
+    "prepare": "husky"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.38.0",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-n": "^17.23.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^16.4.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2"
+  }
 }
